[package]
name = "arsc-cli"
version = "0.1.0"
authors = ["Mårten Kongstad <marten.kongstad@gmail.com>"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "arsc"

[workspace]
members = [
    "arsc",
]

[dependencies]
arsc = { version = "0.1.0", path = "arsc" }
clap = "2.33.0"
zip = "0.5.3"
memmap = "0.7.0"
